<resources>
    <string name="app_name">myPlan</string>
    <string name="add_plan">+ Traingsplan hinzufügen</string>
    <string name="create_plan">Übungen hinzufügen</string>
    <string name="nameofplan">Name des Trainingsplans*:</string>
    <string name="choose_day">Wähle einen Tag für das Training aus:</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
