<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_nameofplan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@id/editText_nameofplan"
        android:text="@string/nameofplan"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_nameofplan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:inputType="textShortMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nameofplan" />

    <TextView
        android:id="@+id/textView_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@id/radioGroup_days"
        android:text="@string/choose_day"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_nameofplan" />

    <RadioGroup
        android:id="@+id/radioGroup_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_day">

        <RadioButton
            android:id="@+id/button_monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <RadioButton
            android:id="@+id/button_tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday" />

        <RadioButton
            android:id="@+id/button_wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednesday" />

        <RadioButton
            android:id="@+id/button_thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday" />

        <RadioButton
            android:id="@+id/button_friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday" />

        <RadioButton
            android:id="@+id/button_saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday" />

        <RadioButton
            android:id="@+id/button_sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday" />
    </RadioGroup>

    <Button
        android:id="@+id/button_add_uebungen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="8dp"
        android:text="Übungen hinzufügen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_cancel_plan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:text="Abbrechen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_1"
        app:layout_constraintTop_toTopOf="@+id/button_add_uebungen" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>